--- a/config/database.yml
+++ b/config/database.yml
@@ -17,6 +17,11 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  username: postgres
+  password: pier614540
+  host: localhost
+  port: 5432
+
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
@@ -81,5 +86,4 @@ test:
 production:
   <<: *default
   database: blog_app_production
-  username: blog_app
-  password: <%= ENV["BLOG_APP_DATABASE_PASSWORD"] %>
+  
