--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ node_modules/
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+/app/assets/builds/*
+!/app/assets/builds/.keep
+
+/node_modules
